# ai-agent-workspace

./: .gitignore  AGENTS.md  Cargo.toml  HANDOFF.md  IDEA.md  PRD.md  README.md  index.html  opencode.json  package-lock.json  package.json  preferences.html  tasks.json  vite.config.ts
.aw/: CONTEXT.md
.aw/adr/: 0001-decouple-pty-identity-from-layout-path.md  0001-tauri-react-ui.md  0001-use-rusqlite-sync.md  0002-app-support-storage.md  0003-codebase-mcp-full-scope.md  0004-template-workspace-instance.md  0005-lucide-react-icons.md  0006-keyboard-shortcut-layout-support.md  0007-cargo-workspace-structure.md  0008-json-canonical-output-format.md  0009-mcp-server-architecture.md  0009-session-orientation-via-env-var.md  0010-cli-to-gui-live-sync-file-watcher.md  0011-mcp-standalone-session-resolution-fallback.md  0012-built-in-templates.md  0013-issue-tracker-storage.md  0014-cdc-event-log-for-mcp-animations.md
.aw/plans/: zoom-pane-feature.md
.aw/progress/: PRD.md  tasks.json
.aw/progress/2026-06-07-task4-cli-binary/: PLAN.md
.aw/progress/2026-06-09-mcp-session-resolution/: PRD.md
.scratch/code-see-and-sourcegraph-equivalent/: HANDOFF.md  PRD.md
.scratch/issue-tracker-panel/: 01-create-and-view.md  02-get-update-close.md  03-delete-and-cascade.md  PLAN.md  PRD.md
.scratch/mcp-session-resolution/issues/: 01-pure-session-resolution-function.md  (+3 more)
.scratch/panel-feel/: 00-quick-wins-shipped.md  01-live-resize.md  02-split-join-close-motion.md  03-join-direct-drag.md  README.md
.scratch/panel-type-selector/: PRD.md
.scratch/pty-stacking-resetting/: HANDOFF.md
.scratch/terminal-panel-pty/: PRD.md
.scratch/terminal-persistence/: README.md  approach-a-instance-pool.md  approach-b-hide-dont-unmount.md  scope-1-switch-survival.md  scope-2-ring-buffer-restart.md
.scratch/trim-then-join/: ISSUE.md
agent-plans/layout-splitting-feature/: PLAN.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/commands/: Cargo.toml
crates/commands/src/: command.rs  error.rs  executor.rs  lib.rs  result.rs  state.rs
crates/core/: Cargo.toml
crates/core/src/: graph.rs  layout_store.rs  lib.rs  session_registry.rs
crates/core/src/database/: migrations.rs  mod.rs  schema.rs
crates/core/src/domain/: change_event.rs  events.rs  issue.rs  layout.rs  mod.rs  screen.rs  session.rs
crates/core/src/repositories/: change_event_repository.rs  issue_repository.rs  layout_repository.rs  mod.rs  session_repository.rs  workspace_repository.rs
crates/mcp/: Cargo.toml
crates/mcp-server/: Cargo.toml
crates/mcp-server/src/: main.rs  session_resolution.rs
crates/mcp-server/tests/: integration_test.rs
crates/mcp/src/: error.rs  lib.rs  session_resolution.rs
docs/: commands.md
docs/agents/: domain.md  triage-labels.md
scripts/: build-release.sh  gh-release.sh
src/: App.css  App.tsx  BlankPanel.tsx  ContextMenu.css  Dialog.css  IssueTrackerPanel.css  IssueTrackerPanel.test.tsx  IssueTrackerPanel.tsx  LayoutTabs.css  LayoutTabs.tsx  LayoutToolbar.css  ManageTemplatesModal.css  ManageTemplatesModal.tsx  NewWorkspaceModal.css  NewWorkspaceModal.tsx  PanelContext.tsx  PanelTypeSelector.tsx  Preferences.css  SashContextMenu.tsx  ScreenRenderer.css  ScreenRenderer.tsx  SessionActionsModal.css  SessionActionsModal.tsx  SessionContext.tsx  SessionSidebar.css  SessionSidebar.tsx  SessionVisuals.tsx  ShortcutsModal.css  ShortcutsModal.tsx  SplitLayout.css  SplitLayout.tsx  StatusBoard.css  StatusBoard.tsx  TabActionsModal.css  TabActionsModal.tsx  TerminalPanel.css  TerminalPanel.tsx  Toast.css  Toast.tsx  ToastContext.tsx  (+12 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db_watcher.rs  layout_store.rs  lib.rs  main.rs  pty.rs  session_registry.rs  task_store.rs
src/components/: ConfirmDialog.tsx  Dialog.test.tsx  Dialog.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  ScrollEdgeCue.css  ScrollEdgeCue.tsx
src/hooks/: useAnchoredPosition.ts  useClickOutside.ts  useEventListener.ts  useScrollEdges.ts  useTauriEvent.ts
src/test/: setup.ts
src/types/: errors.test.ts  errors.ts  screen.ts  status-board.ts
src/utils/: layoutTreeUtils.ts  migrateTree.ts  pathUtils.ts  platform.ts
(+19 files in other folders)
