[package]
name = "ai-agent-workspace"
version = "0.1.1"
description = "A collaborative AI-native development environment where humans and agents share a visual workspace"
authors = ["Ricky Yoshioka"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_agent_workspace_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-store = "2"
ai-agent-workspace-mcp = { path = "../crates/mcp" }
ai-agent-workspace-commands = { path = "../crates/commands" }
ai-agent-workspace-core = { path = "../crates/core" }
dirs = "6"
portable-pty = "0.8"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

