[package]
name = "ai-agent-workspace-commands"
version = "0.1.0"
edition = "2021"

[dependencies]
ai-agent-workspace-core = { path = "../core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
