[package]
name = "ai-agent-workspace-commands"
version = "0.1.1"
edition = "2021"

[dependencies]
ai-agent-workspace-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
dirs = "6"

[dev-dependencies]
tempfile = "3"
