[package]
name = "ai-agent-workspace-core"
version = "0.1.1"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
schemars = { version = "0.8", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "6"
thiserror = "1"
chrono = "0.4"
rusqlite = { version = "0.40", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
