[package]
name = "aiaw-mcp-server"
version = "0.1.1"
edition = "2021"

[dependencies]
ai-agent-workspace-mcp = { path = "../mcp", default-features = false }
ai-agent-workspace-core = { path = "../core" }
dirs = "6"
rmcp = { version = "0.1", features = ["transport-io"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
rusqlite = { version = "0.40", features = ["bundled"] }
chrono = "0.4"
