[package]
name = "ai-agent-workspace-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
ai-agent-workspace-core = { path = "../core" }
ai-agent-workspace-commands = { path = "../commands" }
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmcp = { version = "0.1", features = ["transport-io"] }
