[package]
name = "ai-agent-workspace-mcp"
version = "0.1.1"
edition = "2021"
license = "MIT"

[features]
default = ["tauri-integration"]
tauri-integration = ["tauri"]

[dependencies]
ai-agent-workspace-core = { path = "../core" }
ai-agent-workspace-commands = { path = "../commands" }
tauri = { version = "2", features = [], optional = true }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmcp = { version = "0.1", features = ["transport-io"] }

[dev-dependencies]
tempfile = "3"
